--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href>CARA <img src="./assets/icons8-pottery-96.png" alt="burnt orange vase"> CARA</a>
+            <a href="#">CARA <img src="./assets/icons8-pottery-96.png" alt="burnt orange vase"> CARA</a>
             <ul>
                 <li>HOME</li>
                 <li>ABOUT</li>
@@ -18,7 +18,7 @@
                 <li>CONTACT</li>
             </ul>
             <form method="get">
-                <input>
+                <input id="submitted-search">
             </form>
         </nav>
     </header>
@@ -28,19 +28,198 @@
             <h1>CERAMICS CRAFTED BY HAND...</h1>
             <h1>...FROM THE GROUND UP</h1>
         </section>
-        <section class="ABOUT">
-            <h1>ABOUT US</h1>
-            <p></p>
+        
+        <section class="ABOUT" id="ABOUT">
+            <div>
+                <h1>ABOUT US</h1>
+            </div>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt. Facilisis mauris sit amet massa. Senectus et netus et malesuada fames ac turpis egestas maecenas. Odio aenean sed adipiscing diam donec adipiscing tristique risus nec. Sagittis id consectetur purus ut faucibus. Elit duis tristique sollicitudin nibh sit amet commodo.
+                </p>
+            </div>
+            <div>
+                <img src="./assets/Vase_Dame_2048x2048.jpg" alt="white vase with white flowered plant inside">
+            </div>
+            <div>
+                <p>
+                    Nulla porttitor massa id neque aliquam vestibulum morbi. Facilisi nullam vehicula ipsum a arcu cursus vitae congue. Nam libero justo laoreet sit amet cursus sit amet dictum. Tristique magna sit amet purus gravida quis. Velit euismod in pellentesque massa placerat. In ante metus dictum at tempor commodo. Libero nunc consequat interdum varius sit amet mattis. Egestas sed sed risus pretium quam vulputate dignissim. Diam phasellus vestibulum lorem sed risus. Cursus sit amet dictum sit amet justo donec enim.
+                </p>
+            </div>
+            <div>
+                <p>
+                    Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean. Nullam ac tortor vitae purus
+                </p>
+            </div>
+            <div>
+                <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="white cylinder vase with wheat inside">
+            </div>
         </section>
-        <section class="PRODUCTS">
-            <h1>OUR PRODUCTS</h1>
+
+        <section class="PRODUCTS" id="PRODUCTS">
+            <div>
+                <h1>OUR PRODUCTS</h1>
+            </div>
+            <div class="cards">
+                <div>
+                    <img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="big white bowl behind two smaller off white bowls">
+                    <h2>MUNDO BOWLS</h2>
+                    <h2>$48.00</h2>
+                    <p>
+                        Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                    </p>
+                    <a href>LEARN MORE</a>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="red skinny vase">
+                    <h2>NATUREZA VASE</h2>
+                    <h2>$37.00</h2>
+                    <p>
+                        Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                    </p>
+                    <a href>LEARN MORE</a>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="two stacked white bowls">
+                    <h2>FEIRA BOWLS</h2>
+                    <h2>$29.00</h2>
+                    <p>
+                        Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                    </p>
+                    <a href>LEARN MORE</a>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="two gray pots with white lids">
+                    <h2>NATUREZA POTS</h2>
+                    <h2>$59.00</h2>
+                    <p>
+                        Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                    </p>
+                    <a href>LEARN MORE</a>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="white teardrop vase with eucalyptus inside">
+                    <h2>PEDRA VASE</h2>
+                    <h2>$31.00</h2>
+                    <p>
+                        Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                    </p>
+                    <a href>LEARN MORE</a>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="two distressed white pots with lids">
+                    <h2>VIAJA POTS</h2>
+                    <h2>$57.00</h2>
+                    <p>
+                        Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                    </p>
+                    <a href>LEARN MORE</a>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="one white plate in front of three stacked white plates">
+                    <h2>SERVICO PLATES</h2>
+                    <h2>$35.00</h2>
+                    <p>
+                        Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                    </p>
+                    <a href>LEARN MORE</a>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="skinny blue vase">
+                    <h2>CAMPEAO VASE</h2>
+                    <h2>$37.00</h2>
+                    <p>
+                        Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                    </p>
+                    <a href>LEARN MORE</a>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="two stacked white bowls behind three stacked white bowls">
+                    <h2>TROCA BOWLS</h2>
+                    <h2>$25.00</h2>
+                    <p>
+                        Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean.
+                    </p>
+                    <a href>LEARN MORE</a>
+                    <button>ADD TO CART</button>
+                </div>
+            </div>
         </section>
-        <section class="CONTACT">
+        <section class="CONTACT" id="CONTACT">
+            <div>
             <h1>CONTACT US</h1>
+            </div>
+            <div class="contact form">
+                <div>
+                    <form action="contact us" method="post">
+                        <label id = "email">EMAIL
+                            <input email = "submitted email"
+                            autocomplete="email">
+                        </label>
+                        <label id = "message">MESSAGE
+                            <input message = "submitted message"
+                            autocomplete="message">
+                        </label>
+                        <button>SEND</button>
+                    </form>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
-
+        <section class="footer">
+            <div class="footer">
+                <div>
+                    <a href="#">
+                        CARA 
+                        <img src="./assets/icons8-pottery-96 (1).png" alt="white vase">
+                        CARA</a>
+                </div>
+                <div>
+                    <ul>
+                        <li>
+                            <a href>
+                                <img src="./assets/icons8-youtube-96.png" alt="youtube icon">
+                            </a>
+                        </li>
+                        <li>
+                            <a href>
+                                <img src="./assets/icons8-facebook-96 (1).png" alt="facebook icon">
+                            </a>
+                        </li>
+                        <li>
+                            <a href>
+                                <img src="./assets/icons8-twitter-96.png" alt="twitter icon">
+                            </a>
+                        </li>
+                        <li>
+                            <a href>
+                                <img src="./assets/icons8-instagram-96.png" alt="instagram icon">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <p>
+                        Pretium nibh ipsum consequat nisl vel pretium.
+                    </p>
+                    <p>
+                        Amet tellus cras adipiscing enim eu turpis.
+                    </p>
+                    <p>
+                        ©Copyright 2015 - 2020
+                    </p>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
