--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </h2>
             <ul>
                 <h3>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">PRODUCTS</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#HOME">HOME</a></li>
+                    <li><a href="#ABOUT">ABOUT</a></li>
+                    <li><a href="#PRODUCTS">PRODUCTS</a></li>
+                    <li><a href="#CONTACT">CONTACT</a></li>
                 </h3>
             </ul>
             <form>
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <main>
-        <section class="HOME">
+        <section class="HOME" id="HOME">
             <div class="left">
                 <h1>CERAMICS CRAFTED BY HAND...</h1>
             </div>
@@ -48,33 +48,35 @@
                 <h1>ABOUT US</h1>
             </div>
             <div class="about-layout">
-                <div>
-                    <p id="para1">
+                <div class="para1">
+                    <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt. Facilisis mauris sit amet massa. Senectus et netus et malesuada fames ac turpis egestas maecenas. Odio aenean sed adipiscing diam donec adipiscing tristique risus nec. Sagittis id consectetur purus ut faucibus. Elit duis tristique sollicitudin nibh sit amet commodo.
                     </p>
                 </div>
-                <div id="img2">
+                <div class="img1">
+                    <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" 
+                    alt="white cylinder vase with wheat inside"
+                    width="600.87"
+                    height="808"
+                    >
+                </div>
+                <div class="img2">
                     <img src="./assets/Vase_Dame_2048x2048.jpg" 
                     alt="white vase with white flowered plant inside"
                     width="397"
                     height="534">
                 </div>
-                <div>
-                    <p id="para2">
+                <div class="para2">
+                    <p>
                         Nulla porttitor massa id neque aliquam vestibulum morbi. Facilisi nullam vehicula ipsum a arcu cursus vitae congue. Nam libero justo laoreet sit amet cursus sit amet dictum. Tristique magna sit amet purus gravida quis. Velit euismod in pellentesque massa placerat. In ante metus dictum at tempor commodo. Libero nunc consequat interdum varius sit amet mattis. Egestas sed sed risus pretium quam vulputate dignissim. Diam phasellus vestibulum lorem sed risus. Cursus sit amet dictum sit amet justo donec enim.
                     </p>
                 </div>
-                <div>
-                    <p id="para3">
+                <div class="para3">
+                    <p>
                         Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean. Nullam ac tortor vitae purus
                     </p>
                 </div>
-                <div id="img1">
-                    <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" 
-                    alt="white cylinder vase with wheat inside"
-                    width="600.87"
-                    height="808">
-                </div>
+                
             </div>
         </section>
 
@@ -83,11 +85,11 @@
                 <h1>OUR PRODUCTS</h1>
             </div>
             <div class="cards">
-                <div>
-                    <img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" 
+                <div class="card1">
+                    <a href><img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" 
                     alt="big white bowl behind two smaller off white bowls"
                     width="398"
-                    height="398">
+                    height="398"></a>
                     <h2>MUNDO BOWLS</h2>
                     <h2>$48.00</h2>
                     <p>
@@ -96,11 +98,11 @@
                     <a href>LEARN MORE</a>
                     <button>ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg" 
+                <div class="card2">
+                    <a href><img src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg" 
                     alt="red skinny vase"
                     width="398"
-                    height="398">
+                    height="398"></a>
                     <h2>NATUREZA VASE</h2>
                     <h2>$37.00</h2>
                     <p>
@@ -109,11 +111,11 @@
                     <a href>LEARN MORE</a>
                     <button>ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" 
+                <div class="card3">
+                    <a href><img src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" 
                     alt="two stacked white bowls"
                     width="398"
-                    height="398">
+                    height="398"></a>
                     <h2>FEIRA BOWLS</h2>
                     <h2>$29.00</h2>
                     <p>
@@ -122,11 +124,11 @@
                     <a href>LEARN MORE</a>
                     <button>ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="./assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" 
+                <div class="card3">
+                    <a href><img src="./assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" 
                     alt="two gray pots with white lids"
                     width="398"
-                    height="398">
+                    height="398"></a>
                     <h2>NATUREZA POTS</h2>
                     <h2>$59.00</h2>
                     <p>
@@ -135,11 +137,11 @@
                     <a href>LEARN MORE</a>
                     <button>ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" 
+                <div class="card4">
+                    <a href><img src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" 
                     alt="white teardrop vase with eucalyptus inside"
                     width="398"
-                    height="398">
+                    height="398"></a>
                     <h2>PEDRA VASE</h2>
                     <h2>$31.00</h2>
                     <p>
@@ -148,11 +150,11 @@
                     <a href>LEARN MORE</a>
                     <button>ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="./assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" 
+                <div class="card5">
+                    <a href><img src="./assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" 
                     alt="two distressed white pots with lids"
                     width="398"
-                    height="398">
+                    height="398"></a>
                     <h2>VIAJA POTS</h2>
                     <h2>$57.00</h2>
                     <p>
@@ -161,11 +163,11 @@
                     <a href>LEARN MORE</a>
                     <button>ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="./assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" 
+                <div class="card6">
+                    <a href><img src="./assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" 
                     alt="one white plate in front of three stacked white plates"
                     width="398"
-                    height="398">
+                    height="398"></a>
                     <h2>SERVICO PLATES</h2>
                     <h2>$35.00</h2>
                     <p>
@@ -174,11 +176,11 @@
                     <a href>LEARN MORE</a>
                     <button>ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" 
+                <div class="card7">
+                    <a href><img src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" 
                     alt="skinny blue vase"
                     width="398"
-                    height="398">
+                    height="398"></a>
                     <h2>CAMPEAO VASE</h2>
                     <h2>$37.00</h2>
                     <p>
@@ -187,11 +189,11 @@
                     <a href>LEARN MORE</a>
                     <button>ADD TO CART</button>
                 </div>
-                <div>
-                    <img src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" 
+                <div class="card8">
+                    <a href><img src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" 
                     alt="two stacked white bowls behind three stacked white bowls"
                     width="398"
-                    height="398">
+                    height="398"></a>
                     <h2>TROCA BOWLS</h2>
                     <h2>$25.00</h2>
                     <p>
@@ -224,66 +226,62 @@
         </section>
     </main>
     <footer>
-        <section class="footer">
-            <div class="footer">
-                <div>
-                    <a href="#">
-                        CARA 
-                        <img src="./assets/icons8-pottery-96 (1).png" 
-                        alt="white vase"
-                        width="96"
-                        height="96">
-                        CARA</a>
-                </div>
-                <div>
-                    <ul>
-                        <li>
-                            <a href>
-                                <img src="./assets/icons8-youtube-96.png" 
-                                alt="youtube icon"
-                                width="74"
-                                height="74">
-                            </a>
-                        </li>
-                        <li>
-                            <a href>
-                                <img src="./assets/icons8-facebook-96 (1).png" 
-                                alt="facebook icon"
-                                width="74"
-                                height="74">
-                            </a>
-                        </li>
-                        <li>
-                            <a href>
-                                <img src="./assets/icons8-twitter-96.png" 
-                                alt="twitter icon"
-                                width="74"
-                                height="74">
-                            </a>
-                        </li>
-                        <li>
-                            <a href>
-                                <img src="./assets/icons8-instagram-96.png" 
-                                alt="instagram icon"
-                                width="74"
-                                height="74">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div>
-                    <p>
-                        Pretium nibh ipsum consequat nisl vel pretium.
-                    </p>
-                    <p>
-                        Amet tellus cras adipiscing enim eu turpis.
-                    </p>
-                    <p>
-                        ©Copyright 2015 - 2020
-                    </p>
-                </div>
-            </div>
-        </section>
+        <div class="cara">
+            <a href="#"><h2>
+                CARA 
+                <img src="./assets/icons8-pottery-96 (1).png" 
+                alt="white vase"
+                width="30"
+                height="30">
+                CARA</h2></a>
+        </div>
+        <div class="link-list">
+            <ul>
+                <li>
+                    <a href>
+                        <img src="./assets/icons8-youtube-96.png" 
+                        alt="youtube icon"
+                        width="74"
+                        height="74">
+                    </a>
+                </li>
+                <li>
+                    <a href>
+                        <img src="./assets/icons8-facebook-96 (1).png" 
+                        alt="facebook icon"
+                        width="74"
+                        height="74">
+                    </a>
+                </li>
+                <li>
+                    <a href>
+                        <img src="./assets/icons8-twitter-96.png" 
+                        alt="twitter icon"
+                        width="74"
+                        height="74">
+                    </a>
+                </li>
+                <li>
+                    <a href>
+                        <img src="./assets/icons8-instagram-96.png" 
+                        alt="instagram icon"
+                        width="74"
+                        height="74">
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="bottom">
+            <p>
+                Pretium nibh ipsum consequat nisl vel pretium.
+            </p>
+            <p>
+                Amet tellus cras adipiscing enim eu turpis.
+            </p>
+            <p>
+                ©Copyright 2015 - 2020
+            </p>
+        </div>
     </footer>
 </body>
 </html>
